# dodo_assignment

./: .env.example  .gitignore  API.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
migrations/: 001_init_schema.sql  002_add_account_name.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/db/: mod.rs  pool.rs
src/handlers/: accounts.rs  health.rs  mod.rs  transactions.rs  webhooks.rs
src/middleware/: auth.rs
src/models/: account.rs  api_key.rs  mod.rs  transaction.rs  webhook.rs
src/services/: mod.rs  transaction_service.rs  webhook_service.rs
src/worker/: mod.rs  webhook_worker.rs
