[package]
name = "dodo_assign"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"]}
tokio = { version = "1.48.0", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"
uuid = "1.19.0"