[package]
name = "dodo_assign"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"]}
tokio = { version = "1.48.0", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }